--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.4",
+    "lucide-react-native": "^0.563.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
-    "react-redux": "^9.2.0"
+    "react-native-svg": "^15.15.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
